Remove MemorySegmentHasher for now and revert back to JDK11