@@ -3,17 +3,14 @@ package io.metaloom.utils.hash;
 import static org.junit.Assert.assertEquals;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.Test;
-
-import io.metaloom.utils.hash.impl.MemorySegmentHasher;
 
 /**
  * Run Test with
  * 
  * <pre>
- *  --add-modules jdk.incubator.foreign --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+ *  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
  * </pre>
  *
  */
@@ -28,13 +25,6 @@ public class DefaultHasherTest extends AbstractHasherTest {
 
 		String h2 = HashUtils.computeSHA512(file);
 		assertEquals(h1, h2);
-	}
-
-	@Test
-	public void testHugeFile() {
-		String file = "/dev/zero";
-		String hash = new MemorySegmentHasher().computeSHA512(Paths.get(file));
-		System.out.println("Hash: " + hash);
 	}
 
 }
